--- a/dylensmith-web/Views/Home/Index.cshtml
+++ b/dylensmith-web/Views/Home/Index.cshtml
@@ -133,7 +133,7 @@
 		</ul>
 	</section>-->
 	<!-- Three -->
-	<section id="three">
+	@*<section id="three">
 		<h2>Get In Touch</h2>
 		<p>Accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque lorem ipsum dolor.</p>
 		<div class="row">
@@ -168,11 +168,11 @@
 				</ul>
 			</div>
 		</div>
-	</section>
+	</section>*@
 
 	<!-- Four -->
 
-	<section id="four">
+	@*<section id="four">
 		<h2>Elements</h2>
 
 		<section>
@@ -487,7 +487,7 @@
 			<p><span class="image right"><img src="components/html5up-strata/images/avatar.jpg" alt="" /></span>Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent.</p>
 		</section>
 
-	</section>
+	</section>*@
 
 
 </div>
